# gwak2

./: .gitignore  .gitmodules  README.md  environment.yaml  pyproject.toml
deploy/: README.md  pyproject.toml
gwak/: README.md  Snakefile  config.yaml  model.pt  trashcan.py
gwak/data/: README.md  __init__.py  background.py  background_utils.py  cli.py  config.yaml  gwak_path.py  prior.py  pyproject.toml
gwak/deploy/: README.md  deploy.smk  pyproject.toml
gwak/deploy/deploy/: cli_export.py  cli_infer.py  export.py  infer.py  infer_data.py
gwak/deploy/deploy/config/: export.yaml  infer.yaml
gwak/deploy/deploy/libs/: __init__.py  ensemble.py  infer_blocks.py  loggers.py  time_slides.py  whiten_utils.py
gwak/export/: README.md  apptainer.def  pyproject.toml  requirements.txt
gwak/export/export/: cli.py  main.py  utils.py
gwak/train/: README.md  Snakefile  __init__.py  callback.py  cli.py  cli_base.py  cli_signal.py  config.yaml  dataloader.py  models.py  pyproject.toml  train.smk
gwak/train/configs/: background.yaml  bbh.yaml  cusp.yaml  gaussian.yaml  glitches.yaml  kink.yaml  kinkkink.yaml  sine_gaussian.yaml  sine_gaussian_hf.yaml  sine_gaussian_lf.yaml  white_noise_burst.yaml
gwak/train/configs/gwak1/: background.yaml  bbh.yaml  glitches.yaml  sine_gaussian_hf.yaml  sine_gaussian_lf.yaml
gwak/train/train/: models.py  train.py
gwak1/export/export/: config.yaml
gwak1/train/configs/: sine_gaussian_hf.yaml  sine_gaussian_lf.yaml
gwak2/: README.md  Snakefile
gwak2/data/: __init__.py  prior.py
gwak2/train/: __init__.py  cli_base.py  dataloader.py  train.smk
gwak2/train/configs/: background.yaml  bbh.yaml  glitches.yaml  sine_gaussian_hf.yaml  sine_gaussian_lf.yaml
