[tool.poetry]
name = "gwak"
version = "0.1.0"
description = ""
authors = ["Katya Govorkova <katyag@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# local deps
ml4gw = {path = "./ml4gw", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
