[tool.poetry]
name = "train"
version = "0.1.0"
description = "Training of GWAK models using ml4gw tools"
authors = ["Katya Govorkova <katyag@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
h5py = "^3.11.0"
numpy = "<2.0.0"

# local deps
ml4gw = {path = "../../ml4gw", develop = true}
gwak = {path = "../../../gwak2", develop = true}
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
