[tool.poetry]
name = "train"
version = "0.1.0"
description = "Training of GWAK models using ml4gw tools"
authors = ["Katya Govorkova <katyag@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# local deps
ml4gw = {path = "../../ml4gw", develop = true}
gwak = {path = "../../../gwak2", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
